...
                fontSize: 18,
                includeFontPadding: false,
                lineHeight: 22,
                textAlign: "center",
              }}
            >
              Let's Go!
            </Text>
          </Button>

          <Text className="mx-auto mt-24 max-w-[310px] text-center text-xl leading-8 text-foreground">
            "Explain what the app is, who it is for, and anything else up front that we want to
            tell them."
...
